<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/movieCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/movieRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:text="@string/rateText"
        android:textSize="17sp"
        android:layout_marginStart="175dp" />

    <ImageView
        android:id="@+id/movieImage"
        android:layout_width="125dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/movie_image" />

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/titleText"
        android:textSize="23sp"
        android:layout_marginStart="143dp"/>

    <ImageView
        android:id="@+id/rateImg"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="57dp"
        android:layout_marginStart="143dp"
        android:src="@drawable/rating_icon"
        android:contentDescription="@string/rate_image" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_access_time_24"
        android:layout_marginTop="150dp"
        android:layout_marginStart="143dp"
        android:contentDescription="@string/length_image" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lengthText"
        android:textSize="17sp"
        android:layout_marginTop="155dp"
        android:layout_marginStart="175dp"/>


    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="100dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/categoryLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_marginTop="200dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:orientation="horizontal" />


</androidx.cardview.widget.CardView>