<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MovieActivity">

        <ImageView
            android:id="@+id/movieImg"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:srcCompat="@drawable/loading_icon"
            android:scaleType="fitXY"
            android:contentDescription="@string/movie_image" />

        <ImageView
            android:id="@+id/backImg"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/back_arrow"
            android:contentDescription="@string/back_button" />

        <RelativeLayout
            android:id="@+id/descLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="380dp"
            android:background="@drawable/curved_layout">

            <TextView
                android:id="@+id/movieName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/titleText"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/bookmarkDis"
                android:layout_width="34dp"
                android:layout_height="35dp"
                android:layout_marginStart="350dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/bookmark_disabled"
                android:contentDescription="@string/bookmark_image" />

            <TextView
                android:id="@+id/rateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movieName"
                android:layout_marginStart="62dp"
                android:layout_marginTop="29dp"
                android:text="@string/rateText"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:layout_below="@+id/movieName"
                android:layout_marginStart="25dp"
                android:layout_marginTop="23dp"
                app:srcCompat="@drawable/rating_icon"
                android:contentDescription="@string/rate_image" />

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView6"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:id="@+id/categLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </ScrollView>


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scrollView2"
                android:layout_marginStart="25dp"
                android:layout_marginTop="48dp"
                android:text="@string/lengthText"
                android:textColor="@color/languageAndLengthTextColor"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scrollView2"
                android:layout_marginStart="200dp"
                android:layout_marginTop="48dp"
                android:text="@string/languageText"
                android:textColor="@color/languageAndLengthTextColor"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/movieLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/hoursMinutesText"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/movieLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_marginStart="200dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movieLength"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/descriptionText"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView8"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="30dp"
                android:text="@string/summaryText"
                android:textColor="@color/languageAndLengthTextColor"
                android:textSize="20sp" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>